--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,12 +1,10 @@
 # LOGGING OPTIONS #
 # Should we log to console? true/false
 logConsole: true
-
+logFile: true
 # Enter discord webhook url, to have it disabled set to "disabled"
 all_logs_webhook: "disabled"
 staff_logs_webhook: "disabled"
-
-
 
 # Griefing prevention #
 
@@ -14,5 +12,5 @@ staff_logs_webhook: "disabled"
 blockTnt: false
 
 #Should we block endcrystals, Doesn't apply to the end dimension
-blockCrystal: true
+blockCrystal: false
 
